envoy/yamls/002-infra.yaml
# This is the Gateway implemented using Envoy. This is where the inbound
# traffic gets handled. In addition to Envoy, we also deploy "che-envoy-control" - 
# an additional pod that serves the dynamic configuration for Envoy. This is supposed
# to be part of the Che server itself once implemented.
kind: Pod
apiVersion: v1
metadata:
  name: che-gateway
  labels:
    app: che-gateway 
spec:
  containers:
  - name: envoy
    image: envoyproxy/envoy:v1.14.1
    volumeMounts:
    - name: config
      mountPath: /etc/envoy
  volumes:
  - name: config
    configMap:
      name: envoy-config
---
  kind: Pod
  apiVersion: v1
  metadata:
    name: che-envoy-control
    labels:
      app: che-envoy-control 
  spec:
    containers:
    - name: envoy-control
      image: quay.io/lkrejci/che-envoy-control:latest
      imagePullPolicy: Always
      # the "che_service" is the name of the cluster in envoy config that points to the che server pod.
      command: ["java", "-jar", "che-envoy.jar", "/backends/workspaces.csv", "che_service"]
      volumeMounts:
      - name: config
        mountPath: /backends
    volumes:
    - name: config
      configMap:
        name: gateway-workspaces
---
  kind: Service
  apiVersion: v1
  metadata:
    name: che-envoy-control
  spec:
    selector:
      app: che-envoy-control
    ports:
    - port: 12345
      targetPort: 12345
      protocol: TCP
---
# expose Envoy's admin interface for debugging purposes  
apiVersion: v1
kind: Service
metadata:
  name: envoy-admin
spec:
  selector:
    app: che-gateway
  ports:
  - port: 80
    targetPort: 9901
    protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: envoy-admin
spec:
  host: envoy-admin-lkrejci-singlehostpoc.apps.che-dev.x6e0.p1.openshiftapps.com
  to:
    kind: Service
    name: envoy-admin
